2003-05-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/stf-parse.c (stf_parse_csv_cell): remove debug spew

2003-05-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/GNOME_Gnumeric.xml: Fix spelling
	* src/workbook-control-gui.c: ditto

2003-05-14  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_notebook_switch_page) : set the edit
	  line's scg if we are not in the middle of a rangesel.

	* src/xml-io.c (xml_read_names) : revert my previous error.
	  We can't use parse_pos_init_sheet here because it will fail in the
	  context of workbook level names.

	* src/position.c (parse_pos_init_sheet) : check for that.

2003-05-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/gui-file.c (gui_file_open): change in charmap_selector_new
	  arguments

2003-05-14  Morten Welinder  <terra@gnome.org>

	* src/gutils.c (ldexpgnum): Use gnm_pinf and gnm_ninf.
	* src/regression.c (general_linear_regression): Ditto.

	* src/mathfunc.c (mathfunc_init): Generate gnm_pinf and gnm_ninf
	also.  Try much harder at making a NaN.

	* src/stf-export.c (stf_export_can_transliterate): Don't use
	fallback.  I think we want it to fail if it cannot transliterate
	the test string.

	* src/stf-export.h (StfExportOptions_t): Make quoting_char and
	cell_separator gunichars.

	* src/stf-export.c (stf_export_options_set_quoting_char,
	stf_export_options_set_cell_separator): Ditto.
	(stf_export_cell): Handle gunichar quoting.

2003-05-13  Jody Goldberg <jody@gnome.org>

	* schemas/gnumeric-general.schemas.in : Sans 10 is the default font

2003-05-13  Morten Welinder  <terra@gnome.org>

	* src/stf.c (stf_read_workbook): Set an error message so cancels
	won't cause blank books.

	* src/mathfunc.c (random_binomial): Use qbinom for sane time
	consumption.
	(random_negbinom): Use qnbinom for sane time consumption.

2003-05-13  Jody Goldberg <jody@gnome.org>

	* src/gui-file.c (gui_file_open) : add mnemonics for the type and
	  encoding selector.