@@ -28,6 +28,8 @@ Morten:
 	* Improve generation of NaN, -Inf, and +Inf.
 	* Fix 112330.
 	* Handle character set aliases, more or less.
+	* Improve remote-DISPLAY start-up time by getting rid of calls to
+	  deprecated gtk_style_get_font function.
 
 --------------------------------------------------------------------------
 
